force-app/main/default/objects/Section__c/fields/Assessment_Template__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Template__c</fullName>
    <label>Assessment Template</label>
    <referenceTo>Assessment_Template__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>