force-app/main/default/objects/Section__c/fields/Cloned_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Record_Id__c</fullName>
    <label>Cloned Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>