force-app/main/default/objects/Section__c/fields/No_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Questions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>