force-app/main/default/objects/Section__c/fields/Parent_Section__c.field-meta.xml
<CustomField>
    <fullName>Parent_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>