force-app/main/default/objects/Section__c/fields/Root_Section__c.field-meta.xml
<CustomField>
    <fullName>Root_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Section</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Section__c.Assessment_Template__c</field>
            <operation>equals</operation>
            <valueField>$Source.Assessment_Template__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Sections (Root Section)</relationshipLabel>
    <relationshipName>Sections1</relationshipName>
    <type>Lookup</type>
</CustomField>