force-app/main/default/objects/Section__c/fields/Section_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Section_Sequence_Number__c</fullName>
    <label>Section Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>